# pcprox-console

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main.h  pcprox.cpp  run.sh  syslogger.cpp
include/: pcprox.h  syslogger.h
lib/pcProxAPI/: README.md
src/: main.cpp  pcprox.cpp  syslogger.cpp
